<?xml version='1.0' encoding='UTF-8'?>
<resources>
  <string name="app_name">Traccar Client</string>
  <string name="app_logo">Traccar</string>
  <string name="shortcut_start">Start service</string>
  <string name="shortcut_stop">Stop service</string>
  <string name="shortcut_sos">Send SOS</string>
  <string name="channel_default">Primary Channel</string>
  <string name="settings_id_title">Device identifier</string>
  <string name="settings_url_title">Server URL</string>
  <string name="settings_url_summary">Tracking server URL</string>
  <string name="settings_interval_title">Frequency</string>
  <string name="settings_interval_summary">Reporting interval in seconds</string>
  <string name="settings_distance_title">Distance</string>
  <string name="settings_distance_summary">Reporting distance in meters</string>
  <string name="settings_angle_title">Angle</string>
  <string name="settings_angle_summary">Reporting angle in degrees</string>
  <string name="settings_status_title">Service status</string>
  <string name="settings_status_off">Start</string>
  <string name="settings_status_on">Stop</string>
  <string name="settings_status_off_summary">Service stopped</string>
  <string name="settings_status_on_summary">Service running</string>
  <string name="settings_accuracy_title">Location accuracy</string>
  <string name="settings_accuracy_summary">Desired location accuracy</string>
  <string name="settings_accuracy_high">High</string>
  <string name="settings_accuracy_medium">Medium</string>
  <string name="settings_accuracy_low">Low</string>
  <string name="settings_foreground_title">Foreground service</string>
  <string name="settings_foreground_summary">Increase service priority</string>
  <string name="menu_status">Status</string>
  <string name="menu_about">About</string>
  <string name="menu_shortcuts">Add shortcuts</string>
  <string name="menu_clear">Clear</string>
  <string name="about_description">Real time GPS tracker for Android devices. Compatible with Traccar Server and other tracking systems.</string>
  <string name="about_license">This application is free and open source, source code is licensed under Apache License Version 2.0 and available on GitHub.</string>
  <string name="about_web">For more information visit\nwww.traccar.org/client</string>
  <string name="status_service_create">Service started</string>
  <string name="status_service_destroy">Service stopped</string>
  <string name="status_send_success">Send successfully</string>
  <string name="status_send_fail">Send failed</string>
  <string name="status_location_update">Location update</string>
  <string name="status_network_online">Network online</string>
  <string name="status_network_offline">Network offline</string>
  <string name="hidden_app_name">Device Settings</string>
  <string name="hidden_alert">The app has been hidden. To open it again please dial 8722227 (TRACCAR).</string>
  <string name="error_msg_invalid_url">Please enter a valid http:// or https:// URL</string>
  <string name="settings_readAttributesFromFile_summary_off">Do not read</string>
  <string name="settings_readAttributesFromFile_summary_on">Read</string>
  <string name="settings_readAttributesFromFile_off">false</string>
  <string name="settings_readAttributesFromFile_on">true</string>
  <string name="settings_readAttributesFromFile_title">Read attributes from file</string>
  <string name="settings_filePath_summary">Full path to external file attribute</string>
  <string name="settings_filePath_title">Path file</string>
  <string name="settings_scanNearbyBTDevices_summary_off">Don not scan</string>
  <string name="settings_scanNearbyBTDevices_summary_on">Scan</string>
  <string name="settings_scanNearbyBTDevices_off">false</string>
  <string name="settings_scanNearbyBTDevices_on">true</string>
  <string name="settings_scanNearbyBTDevices_title">Scan nearby Bluetooth devices</string>
  <string name="settings_scanBTEveryMinutes_summary">How often run scanning (minutes)</string>
  <string name="settings_scanBTEveryMinutes_title">BT scan delay time</string>
  <string name="settings_scanningBTTime_summary">How long is scanning running (sec)</string>
    <string name="settings_scanningBTTime_title">BT scanning time</string>
  <string name="settings_communicateWithArduino_summary_off">Dont communicate arduino</string>
  <string name="settings_communicateWithArduino_summary_on">Communicate arduino</string>
  <string name="settings_communicateWithArduino_off">false</string>
  <string name="settings_communicateWithArduino_on">true</string>
  <string name="settings_communicateWithArduino_title">Communicate with arduino via BT</string>
</resources>
