<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <SwitchPreference
        android:defaultValue="false"
        android:key="status"
        android:summaryOff="@string/settings_status_off_summary"
        android:summaryOn="@string/settings_status_on_summary"
        android:switchTextOff="@string/settings_status_off"
        android:switchTextOn="@string/settings_status_on"
        android:title="@string/settings_status_title" />

    <EditTextPreference
        android:key="id"
        android:title="@string/settings_id_title" />

    <EditTextPreference
        android:defaultValue="@string/settings_url_default_value"
        android:key="url"
        android:summary="@string/settings_url_summary"
        android:title="@string/settings_url_title" />

    <ListPreference
        android:defaultValue="medium"
        android:entries="@array/settings_accuracy_names"
        android:entryValues="@array/settings_accuracy_values"
        android:key="accuracy"
        android:summary="@string/settings_accuracy_summary"
        android:title="@string/settings_accuracy_title" />

    <EditTextPreference
        android:defaultValue="300"
        android:key="interval"
        android:numeric="integer"
        android:summary="@string/settings_interval_summary"
        android:title="@string/settings_interval_title" />

    <EditTextPreference
        android:defaultValue="0"
        android:key="distance"
        android:numeric="integer"
        android:summary="@string/settings_distance_summary"
        android:title="@string/settings_distance_title" />

    <EditTextPreference
        android:defaultValue="0"
        android:key="angle"
        android:numeric="integer"
        android:summary="@string/settings_angle_summary"
        android:title="@string/settings_angle_title" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="readAttributesFromFile"
        android:summaryOff="Don't read"
        android:summaryOn="Read"
        android:switchTextOff="false"
        android:switchTextOn="true"
        android:title="Read attributes from file" />

    <EditTextPreference
        android:defaultValue=""
        android:key="filePath"
        android:summary="Path to external file attribute"
        android:title="Path file" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="scanNearbyBTDevices"
        android:summaryOff="Don't scan"
        android:summaryOn="Scan"
        android:switchTextOff="false"
        android:switchTextOn="true"
        android:title="Scan nearby Bluetooth devices" />

    <EditTextPreference
        android:defaultValue="10"
        android:key="scanBTEveryMinutes"
        android:numeric="integer"
        android:summary="How often run scanning (minutes)"
        android:title="BT scan delay time" />

    <EditTextPreference
        android:defaultValue="1"
        android:key="scanningBTTime"
        android:numeric="integer"
        android:summary="How long is scanning running (seconds)"
        android:title="BT scanning time" />

</PreferenceScreen>
